--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-# remote_theme : mmistakes/minimal-mistakes
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+remote_theme: "mmistakes/minimal-mistakes@4.26.2"
